<resources>
    <string name="app_name">ToDoApp</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="facebook_app_id">1560891924260880</string>
    <string name="fb_login_protocol_scheme">fb1560891924260880</string>
    <string name="resetPasswordMessage">Enter your registered email address where the reset password link will be sent</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="appName_toolbar">FunDoo</string>
    <string name="loadingScreen_please_wait">Please wait..</string>
    <string name="login_textView">Login</string>
    <string name="enter_your_email_editText">Enter your email</string>
    <string name="enter_your_password_editText">Enter your password</string>
    <string name="login_forgot_password_editText">Forgot password?</string>
    <string name="login_noAccount_message">Don\'t have any account?</string>
    <string name="register_button_message">Register</string>
    <string name="or">OR</string>
    <string name="note_title">Title</string>
    <string name="note_content_note">Note</string>
    <string name="save_button_text">Save</string>
    <string name="logout_buttonText">Logout</string>
    <string name="send_button_text">send</string>
    <string name="invalid_userName_message">Username cannot be empty</string>
    <string name="sign_up_textView">Sign Up</string>
    <string name="enterName_editText">Enter your name</string>
    <string name="enter_mobileNum_editText">Enter your mobile number</string>
    <string name="confirm_password_editText">Confirm password</string>
    <string name="register_button_text">REGISTER</string>
    <string name="already_have_any_account_text">Already have any account?</string>
    <string name="navbar_notes_buttonText">Notes</string>
    <string name="navbar_reminder_buttonText">Reminders</string>
    <string name="search_buttonText">Search</string>
    <string name="toggle_buttonText">Toggle</string>
    <string name="profile_buttonText">Profile</string>
    <string name="error_password_minimum_6_characters">Password should be of minimum 6 characters</string>
    <string name="error_invalidEmail">Invalid email format</string>
    <string name="error_invalidMobile">Invalid mobile number</string>
    <string name="error_differentPassword">Passwords doesn\'t match</string>
    <string name="error_storage_access_denied">Storage access required to upload</string>
    <string name="toast_userLoggedIn_message">User logged in</string>
    <string name="toastError_loginFailed_message">Sign in failed</string>
    <string name="toastError_facebookLogin_error">Facebook login unsuccessful</string>
    <string name="toast_emptyNoteDiscarded">Empty note discarded</string>
    <string name="toast_create_a_note_first_message">Create a new note first</string>
    <string name="toastError_noteNotCreated">Note not created</string>
    <string name="toastError_updateNoteFailed">Update note failed</string>
    <string name="toastError_deleteNoteFailed">Delete note failed</string>
    <string name="toast_emailSent_resetPassword">Email has been sent to reset the password</string>
    <string name="toastError_noAccountAssociated">No account is associated with the given email</string>
    <string name="toast_userSignedUp">User signed up</string>
    <string name="toastError_account_not_created">Account not created</string>
    <string name="navHeader">FunDoo Notes</string>
    <string name="reminder_delete_message">Do you want to delete the reminder?</string>
    <string name="yes_word">Yes</string>
    <string name="cancel_word">Cancel</string>
    <string name="reminder_label_formatter_pattern">dd MMM, hh:mm aa</string>


</resources>