<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/searchViewToolbar"
        android:title="@string/search_buttonText"
        android:icon="@drawable/search_icon"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/toggle_gridLinear_view"
        android:title="@string/toggle_buttonText"
        app:actionLayout="@layout/toggle_menu_item"
        app:showAsAction="always"/>

    <item android:id="@+id/profileIcon"
        android:title="@string/profile_buttonText"
        android:icon="@drawable/profile_button"
        app:showAsAction="always" />


</menu>