<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/mainOperations">
        <item
            android:id="@+id/nav_notes_item"
            android:title="@string/navbar_notes_buttonText"
            android:icon="@drawable/nav_notes_icon"/>

        <item
            android:id="@+id/nav_remainders_item"
            android:title="@string/navbar_reminder_buttonText"
            android:icon="@drawable/nav_reminder_icon"/>

        <item
            android:id="@+id/nav_archived_item"
            android:title="Archived"
            android:icon="@drawable/archive_icon"/>
    </group>

    <group android:id="@+id/labelsNavGroup">
        <item
            android:id="@+id/createNewLabelNavItem"
            android:title="Create new label"
            android:icon="@drawable/add_icon"/>

    </group>

    <item
        android:id="@+id/nav_logout_item"
        android:title="@string/logout_buttonText"
        android:icon="@drawable/nav_logout_icon"/>

</menu>