<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:id="@+id/resetBackButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/back_key" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resetPassMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/resetPasswordMessage"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/resetPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/resetPassMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/browser_actions_bg_grey"
        android:hint="@string/enter_your_email_editText"
        android:padding="10dp"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetSendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_button_text"
        android:layout_below="@+id/resetPasswordEditText"/>

</RelativeLayout>