<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    android:scrollbarThumbHorizontal="@null">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signupLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up_textView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:textSize="30dp"></com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            android:layout_below="@+id/signupLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enterName_editText"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_below="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_email_editText"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutMobile"
            android:layout_below="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_mobileNum_editText"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_below="@+id/layoutMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_password_editText"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutConfirmPassword"
            android:layout_below="@id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confirm_password_editText"
            app:hintTextColor="@color/black"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signupSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutConfirmPassword"
            android:layout_marginTop="20dp"
            android:text="@string/register_button_text"></Button>

        <RelativeLayout
            android:id="@+id/layoutAlreadyAcc"
            android:layout_below="@+id/signupSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signupLoginMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_any_account_text"
                android:textColor="@color/black"></com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signupLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/signupLoginMessage"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/purple_700"
                android:textStyle="bold"></com.google.android.material.textview.MaterialTextView>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>

